# aoc-utils

./: README.md
cpp_utils/: CMakeLists.txt
cpp_utils/include/cpp_utils/: array2d.hpp  array2d.tpp  array2d_builder.hpp  array2d_formatter.hpp  array2d_iter.hpp  array2d_range.hpp  command_line.hpp  coords.hpp  coords2d.hpp  coords2d_formatter.hpp  coords_formatter.hpp  exceptions.hpp  input.hpp  intervals.hpp  math.hpp  print_vector.h  print_vector.hpp  search.hpp
cpp_utils/include/cpp_utils/_template_definitions/: array2d.tpp  array2d_builder.tpp  coords2d.tpp  intervals.tpp  search.tpp
cpp_utils/src/: array2d.cpp  array2d_builder.cpp  coords2d.cpp  input.cpp
cpp_utils/tests/: CMakeLists.txt  main.cpp  test_array2d.cpp  test_main.cpp
